--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "chalk": "^5.4.1",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
-    "openai": "^4.77.3"
+    "openai": "^4.77.3",
+    "tiktoken": "^1.0.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
