--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
     "openai": "^4.77.3",
+    "string-width": "^7.2.0",
     "tiktoken": "^1.0.22"
   },
   "devDependencies": {
